syntax = "proto3";

option go_package = "./pb";

package pb;

message ExecuteCodeReq {
  repeated string inputList = 1;
  string code = 2;
  string language = 3;
}

message ExecuteCodeResp {
  repeated string outputList = 1;
  string message = 2; // 接口信息
  int64 status = 3; // 执行状态
  // 判题信息
  string executeResultMessage = 4; // 程序执行信息
  int64 executeResultTime = 5; // 程序消耗时间
  int64 executeResultMemory = 6; // 程序消耗内存
}

service codeSandbox {
  rpc executeCode(ExecuteCodeReq) returns(ExecuteCodeResp);
}

// goctl rpc protoc ./pb/sandbox.proto --go_out=. --go-grpc_out=. --zrpc_out=.